kubernetes-network-microsegmentation/network-policy-backup/backend-active-policies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"backend-access-control","namespace":"backend"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"database"}},"podSelector":{"matchLabels":{"app":"database","tier":"data"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.na [...]
    creationTimestamp: "2026-07-14T22:55:50Z"
    generation: 1
    name: backend-access-control
    namespace: backend
    resourceVersion: "1961"
    uid: 3f983013-d39d-4de1-98c3-6988e63c688a
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: database
        podSelector:
          matchLabels:
            app: database
            tier: data
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: frontend
        podSelector:
          matchLabels:
            app: frontend
            tier: web
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: backend
        tier: api
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"backend-diagnostics-access","namespace":"backend"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"diagnostics"}},"podSelector":{"matchLabels":{"app":"network-debug","role":"diagnostics"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"backend","tier":"api"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-07-14T23:05:36Z"
    generation: 1
    name: backend-diagnostics-access
    namespace: backend
    resourceVersion: "2910"
    uid: 59a829b8-e1d1-455d-a85d-bcdb44bffdef
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: diagnostics
        podSelector:
          matchLabels:
            app: network-debug
            role: diagnostics
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: backend
        tier: api
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
