kubernetes-network-microsegmentation/network-policy-backup/database-active-policies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"database-access-control","namespace":"database"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]}],"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"backend"}},"podSelector": [...]
    creationTimestamp: "2026-07-14T22:55:42Z"
    generation: 1
    name: database-access-control
    namespace: database
    resourceVersion: "1948"
    uid: 7b3f32ab-b5cc-44da-8e34-671ea071896a
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
          matchLabels:
            app: backend
            tier: api
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: database
        tier: data
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"database-port-specific","namespace":"database"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"backend"}},"podSelector":{"matchLabels":{"app":"backend","tier":"api"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"database","tier":"data"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-07-14T23:00:50Z"
    generation: 1
    name: database-port-specific
    namespace: database
    resourceVersion: "2438"
    uid: 521c0ff4-ae9a-4f38-9e07-22219cba3443
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
          matchLabels:
            app: backend
            tier: api
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: database
        tier: data
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
