kubernetes-network-microsegmentation/network-policy-backup/frontend-active-policies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-access-control","namespace":"frontend"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"backend"}},"podSelector":{"matchLabels":{"app":"backend","tier":"api"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.nam [...]
    creationTimestamp: "2026-07-14T22:56:06Z"
    generation: 1
    name: frontend-access-control
    namespace: frontend
    resourceVersion: "1986"
    uid: 20942894-009d-418b-9005-4a4ed28142ab
  spec:
    egress:
    - ports:
      - port: 80
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: backend
        podSelector:
          matchLabels:
            app: backend
            tier: api
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app: frontend
        tier: web
    policyTypes:
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-default-deny","namespace":"frontend"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2026-07-14T23:00:33Z"
    generation: 1
    name: frontend-default-deny
    namespace: frontend
    resourceVersion: "2410"
    uid: 52dc3e1f-bf03-4594-bc1b-bac5254d7327
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-ingress-control","namespace":"frontend"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"frontend"}},"podSelector":{"matchLabels":{"app":"frontend","tier":"web"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"frontend","tier":"web"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-07-14T23:00:42Z"
    generation: 1
    name: frontend-ingress-control
    namespace: frontend
    resourceVersion: "2424"
    uid: 95cde087-7101-4bfa-ad4d-8582b9051dca
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: frontend
        podSelector:
          matchLabels:
            app: frontend
            tier: web
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: frontend
        tier: web
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
